--- a/apps/data-integration/package.json
+++ b/apps/data-integration/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@portfolio/shared-ui": "*",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
